<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/choose_operation_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
          />

    <Button
        android:id="@+id/btn_home_compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_compute" />

    <Button
        android:id="@+id/sos_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sos_button" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partager" />

    <Button
        android:id="@+id/directions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lancer_itineraire" />

</LinearLayout>